# laverna

./: .dockerignore  .gitignore  .golangci.yaml  .goreleaser.yaml  Dockerfile  LICENSE  README.md  codecov.yaml  commands.go  commands_test.go  deploy.sh  docker-compose.yaml  go.mod  go.sum  main.go  note-type.apkg
.github/: FUNDING.yml
.github/workflows/: funding.yaml  main.yaml  release.yaml  tests.yaml
addon/: README.md  __init__.py  config.json  pyproject.toml
anki/: record.go  record_test.go  runner.go  runner_test.go
commands/: anki.go  anki_test.go  run.go  run_test.go  yomitan.go  yomitan_test.go
scripts/: addon-dev.sh  addon-zip.sh  symlink.py  zip.py
synthesize/: runner.go  runner_test.go  speed.go  speed_test.go  synthesize.go  synthesize_test.go  voice.go  voice_test.go
testdata/: Aout.csv  anki-example.csv  anki-example2.csv  anki-th-example.csv  anki-vi-example.csv  synthesize-invalid-voice.csv
yomitan/: handler.go  handler_test.go
